crates/uitest/fixtures/parser/call.snap
---
source: crates/uitest/tests/parser.rs
expression: diags
input_file: crates/uitest/fixtures/parser/call.fe
---
error[1-0001]: unexpected syntax while parsing function call arguments
  ┌─ call.fe:2:10
  │
2 │ foo(x, y a, z ;)
  │          ^ unexpected

error[1-0001]: unexpected syntax while parsing function call arguments
  ┌─ call.fe:2:15
  │
2 │ foo(x, y a, z ;)
  │               ^ unexpected

error[1-0001]: unexpected syntax while parsing generic type argument list
  ┌─ call.fe:4:12
  │
4 │ foo<i32, T E, >(x, y)
  │            ^ unexpected
